// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar menu when visible 1`] = `
<menu
  class="sc-gKsewC gSvkzp"
  role="menu"
>
  <ul
    class="sc-bdfBwQ cJHRYr"
    role="menu"
  >
    <li
      class="sc-gsTCUz fXCZoy"
    >
      <a
        class="sc-dlfnbm gWYOlF disabledCursor"
        to="/"
      >
        <span
          class="sc-hKgILt fNqzIf"
        >
          Home
        </span>
      </a>
    </li>
    <li
      class="sc-gsTCUz fXCZoy"
    >
      <a
        class="sc-dlfnbm gWYOlF disabledCursor"
        to="/"
      >
        <span
          class="sc-hKgILt fNqzIf"
        >
          Favorites
        </span>
      </a>
    </li>
  </ul>
</menu>
`;

exports[`Navbar render correctly 1`] = `
<nav
  class="sc-iBPRYJ jXdOCI"
  data-testid="nav"
>
  <span
    class="sc-eCssSg jdsWoj"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-bars fa-w-14 "
      data-icon="bars"
      data-prefix="fas"
      data-testid="toggle-button"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        fill="currentColor"
      />
    </svg>
  </span>
  <ul
    class="sc-fubCfw dmnYev"
  >
    <li
      class="sc-jrAGrp hnzIIL"
    >
      <div
        class="search"
      >
        <input
          class="search-box"
          name="search"
          placeholder="Search..."
          type="text"
        />
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-search fa-w-16 search-icon"
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
      </div>
    </li>
  </ul>
  <ul
    class="sc-pFZIQ jgWwjd"
  >
    <li
      class="sc-jrAGrp hnzIIL"
    >
      <span
        class="sc-jSgupP gnqZgo disabledCursor"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user fa-w-14 "
          data-icon="user"
          data-prefix="fas"
          data-testid="user-button"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
            fill="currentColor"
          />
        </svg>
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Navbar toggle button when visible 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-bars fa-w-14 "
  data-icon="bars"
  data-prefix="fas"
  data-testid="toggle-button"
  focusable="false"
  role="img"
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
    fill="currentColor"
  />
</svg>
`;

exports[`Navbar user menu button when visible 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-user fa-w-14 "
  data-icon="user"
  data-prefix="fas"
  data-testid="user-button"
  focusable="false"
  role="img"
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
    fill="currentColor"
  />
</svg>
`;
